--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "x8.11.3",
+    "node": "8.11.3",
     "npm": "6.2.0"
   },
   "author": "",
