--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "mysql": "^2.15.0",
     "redis": "^2.8.0",
     "selenium-webdriver": "^3.6.0",
-    "sharp": "^0.20.5",
-
+    "sharp": "^0.20.5"
   },
   "devDependencies": {},
   "scripts": {
