--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "choibongjae",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
+  "name" : "resell",
+  "version" : "0.0.1",
+  "dependencies":{
+    "express":">=2.5.9",
     "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "canvas": "^1.6.11",
     "compression": "^1.7.3",
-    "express": "^4.16.4",
     "form-data": "^2.3.2",
     "gm": "^1.23.1",
     "hexo-server": "^0.3.3",
@@ -19,17 +17,5 @@
     "redis": "^2.8.0",
     "selenium-webdriver": "^3.6.0",
     "sharp": "^0.20.5"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "start" : "node test_1.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-
-  "author": "",
-  "license": "ISC",
-  "engines": {
-    "node": "8.11.3",
-    "npm": "6.2.0"
   }
 }
